[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/Textbox.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Semi-Coder-Regular.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Blink"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_out"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "pop_in"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "pop_out"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0236853 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 600 ) ]
}

[node name="Textbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Boxes" type="Control" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="NameBoxOut" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 295.0
margin_top = 559.0
margin_right = 694.0
margin_bottom = 670.0
color = Color( 0.617474, 0.334534, 0.792969, 0.313726 )

[node name="NameBoxIn" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 302.5
margin_top = 566.5
margin_right = 686.5
margin_bottom = 662.5
color = Color( 0, 0, 0, 0.313726 )

[node name="Name" type="Label" parent="CanvasLayer/Boxes"]
margin_left = 310.0
margin_top = 574.0
margin_right = 679.0
margin_bottom = 659.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="TextBoxOut" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 295.0
margin_top = 670.0
margin_right = 1625.0
margin_bottom = 1040.0
color = Color( 0.617474, 0.334534, 0.792969, 0.313726 )

[node name="TextBoxIn" type="ColorRect" parent="CanvasLayer/Boxes"]
margin_left = 320.0
margin_top = 695.0
margin_right = 1600.0
margin_bottom = 1015.0
color = Color( 0, 0, 0, 0.313726 )

[node name="Text" type="Label" parent="CanvasLayer/Boxes"]
margin_left = 345.0
margin_top = 720.0
margin_right = 1545.0
margin_bottom = 990.0
custom_fonts/font = SubResource( 1 )
autowrap = true
clip_text = true

[node name="Arrow" type="Label" parent="CanvasLayer/Boxes"]
editor/display_folded = true
visible = false
margin_left = 1590.0
margin_top = 980.0
margin_right = 1615.0
margin_bottom = 1039.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Boxes/Arrow"]
anims/Blink = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Boxes"]
anims/fade_in = SubResource( 4 )
anims/fade_out = SubResource( 5 )
anims/pop_in = SubResource( 10 )
anims/pop_out = SubResource( 11 )
anims/slide_in = SubResource( 8 )
anims/slide_out = SubResource( 9 )

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="SkipTimer" type="Timer" parent="."]
one_shot = true

[node name="NextTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

